--- a/Projekti/index.html
+++ b/Projekti/index.html
@@ -84,7 +84,7 @@
                 <i class="bx bx-bug"></i>
               </div>
               <div class="card-body">
-                <h5 class="card-title"><a href="">Cyber Security</a></h5>
+                <h5 class="card-title"><a href="shfcyber.html" target="_self">Cyber Security</a></h5>
                 <p class="card-text">Computer security, cybersecurity or information technology security is the protection of computer systems and networks from information disclosure, theft of or damage to their hardware, software, or electronic data, as well as from the disruption or misdirection of the services they provide. </p>
               </div>
             </div>
@@ -96,7 +96,7 @@
                 <i class="bx bx-code"></i>
               </div>
               <div class="card-body">
-                <h5 class="card-title"><a href="">Software Development</a></h5>
+                <h5 class="card-title"><a href="soft.html" target="_self">Software Development</a></h5>
                 <p class="card-text">Software development is the process of conceiving, specifying, designing, programming, documenting, testing, and bug fixing involved in creating and maintaining applications, frameworks, or other software components.</p>
               </div>
             </div>
@@ -108,7 +108,7 @@
                 <i class="bx bx-chart"></i>
               </div>
               <div class="card-body">
-                <h5 class="card-title"><a href="">Data and AI</a></h5>
+                <h5 class="card-title"><a href="data.html" target="_self">Data and AI</a></h5>
                 <p class="card-text">“Data is the lifeblood of AI. An AI system needs to learn from data in order to be able to fulfill its function. ... Essentially, there must be an agreed-upon methodology to data collection (mining) and data structure before running the data through a machine learning or deep learning algorithm.</p>
               </div>
             </div>
